Make size on an infinite each_slice enumerator return Infinity

Fixes [Bug #15889]